@@ -24,6 +24,7 @@ table, caption, tbody, tfoot, thead, tr, th, td {
 	vertical-align: baseline;
 }
 
+
 body { line-height: 1.5; background: #fff; margin:1.5em 0; }
 
 /* Tables still need 'cellspacing="0"' in the markup. */
