@@ -14,12 +14,7 @@
 	
 	<!-- Import fancy-type plugin for the sample section. -->
 	<link rel="stylesheet" href="../blueprint/plugins/fancy-type/fancy-type.css" type="text/css" media="screen, projection">
-	
-	<!-- Show the grid and baseline -->
-	<style type="text/css">
-	/*<![CDATA[*/
-	/*]]>*/
-	</style>
+
 </head>
 <body>
 
