@@ -64,6 +64,7 @@ Version 0.6 - TBD
   * Fixed validation errors in tests. [OFB]
   * Changed IE stylesheet condition comment to include all versions of IE. [OFB]
   * Started on a new approach for the PNG plugin. Will not be included in this release. [OFB]
+  * Fixed incorrect rendering of ol in IE6/7. [OFB]
   
 
 Version 0.5 - 28/8/2007
